# settings for setup.py
[metadata]
author = Brett Lykins
author_email = brett.lykins@rackspace.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
description = Backup Network Device Configurations
download_url = https://github.com/rackerlabs/stockpiler/archive/v0.5.1.tar.gz
keywords =
    stockpiler
    backups
    network
    nornir
    python
license = LGPLv3+
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
python_requires = >=3.7
url = https://github.com/rackerlabs/stockpiler

[options]
install_requires =
    bcrypt>=3.1.7
    certifi>=2019.11.28
    cffi>=1.13.2
    chardet>=3.0.4
    ciscoconfparse>=1.4.11
    colorama>=0.4.3
    cryptography>=2.8
    dnspython>=1.16.0
    future>=0.18.2
    gitdb2>=2.0.6
    GitPython>=3.0.5
    idna>=2.8
    Jinja2>=2.10.3
    junos-eznc>=2.2.1
    lxml>=4.4.2
    MarkupSafe>=1.1.1
    mypy-extensions>=0.4.3
    napalm>=2.5.0
    ncclient>=0.6.7
    netaddr>=0.7.19
    netmiko>=3.0.0
    nornir>=2.3.0
    nxapi-plumbing>=0.5.2
    paramiko>=2.7.1
    passlib>=1.7.2
    pydantic>=0.18.2
    pyeapi>=0.8.2
    pyIOSXR>=0.53
    PyNaCl>=1.3.0
    pyparsing>=2.4.6
    pyserial>=3.4
    PySocks>=1.7.1
    PyYAML>=5.3
    requests>=2.22.0
    ruamel.yaml>=0.15.85
    ruamel.yaml.clib>=0.2.0
    scp>=0.13.2
    six>=1.13.2
    smmap2>=2.0.5
    textfsm>=1.1.0
    transitions>=0.7.2
    typing-extensions>=3.7.4.1
    urllib3>=1.25.7
    yamlordereddictloader>=0.4.0
packages =
    stockpiler
    stockpiler.processors
    stockpiler.tasks
    stockpiler.tasks.stockpile
zip_safe = False

[options.entry_points]
console_scripts =
    stockpiler = stockpiler.__main__:main

[options.extras_require]
test =
    bandit
    black
    mypy
    pytest
    pylint
    safety
build =
    setuptools
    sphinx
    sphinx_rtd_theme
    towncrier
    twine
    wheel

[options.package_data]
stockpiler =
    stockpiler/ssh_config
    stockpiler/nornir_conf.yaml

# settings for tox
[tox]
envlist = py37

[testenv]
commands = python setup.py test
deps =


# settings for flake8
[flake8]
max-line-length = 120
ignore = D203
exclude =
    .git,
    docs,
    lib,
    bin,
    include,
    build,
    dist,
    stockpiler.egg-info,
max-complexity = 10
